cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_392.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/ssl/statem/statem_dtls.c:616: error: DEAD_STORE
  The value written to &i (type int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/ssl/statem/statem_dtls.c:616:13: Write of unused value
614.           item = pitem_new(seq64be, frag);
615.           if (item == NULL) {
616.               i = -1;
                   ^
617.               goto err;
618.           }
